# t9rag

./: .gitignore  LICENCE  README.md  app.py  mapp.py  pyproject.toml
chroma_db/: chroma.sqlite3
notebooks/en/: rag_evaluation.ipynb
prompts/: default.yaml  ora.yaml
src/t9rag/: __init__.py  __version__.py  document_reader.py  embedding_model.py  logging_config.yaml  main.py  mistral_llm.py  mistral_streamlit_app.py  ollama_llm.py  reranker.py  streamlit_app.py  trainer.py  vector_store.py
